--- a/figures/11_map.Rmd
+++ b/figures/11_map.Rmd
@@ -20,9 +20,7 @@ study_bbox    <- st_read("../data/gis.gpkg", "study_bbox", quiet = TRUE)[3,]
 ep            <- st_read("../data/gis.gpkg", "ep", quiet = TRUE)
 states_all    <- st_read("../data/gis.gpkg", "states_all", quiet = TRUE)
 states_focal  <- st_read("../data/gis.gpkg", "states_focal", quiet = TRUE)
-hu4_focal     <- st_read("../data/gis.gpkg", "hu4s_focal", quiet = TRUE)
-hu4_focal     <- st_crop(st_transform(hu4_focal, st_crs(study_bbox)), study_bbox) 
-hu4_focal     <- rmapshaper::ms_simplify(hu4_focal)
+hu4_focal     <- st_read("../data/gis.gpkg", "hu4s_focal_simple", quiet = TRUE)
 
 # outline <- ne_countries(country = c("canada", "mexico", "united states of america"), 
 #                      returnclass = "sf")
