--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -47,9 +47,12 @@ re_global$term     <- unlist(lapply(re_brms,
 re_global$response <- c(rep("tp", nrow(re_global) / 2), rep("tn", nrow(re_global) / 2))
 re_global          <- left_join(re_global, pred_key, by = c("term" = "var")) %>%
   dplyr::select(pretty, `5%`:`95%`, term, response)
-# re_global <- dplyr::filter(re_global, term != "rowvcropvpct")
+re_global <- dplyr::filter(re_global, term != "rowvcropvpct")
 # group_by(re_global, response) %>%
 #   arrange(desc(`50%`))
+re_names <- unlist(lapply(re_brms, function(x) 
+  get_re_text(as.character(x$formula)[[1]])))[1:length(re_brms)]
+re_brms <- re_brms[re_names != "rowvcropvpct"]
 ```
 
 ```{r pre_tp_fe, out.width="3.45in", out.height="4in"}
