--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -186,9 +186,9 @@ ncol = 1, rel_heights = c(1, 0.05))
 
 ```{r tp_re, fig.width=3.25, fig.height=4.5}
 fit_tp$re$hu4vzoneid <- gsub("HU4_", "", fit_tp$re$hu4vzoneid)
-fit_tp$re <- fit_tp$re %>%
-  mutate_at(vars(matches("%")), function(x) x + 
-              as.numeric(fit_tp$re_global["50%"]))
+# fit_tp$re <- fit_tp$re %>%
+#   mutate_at(vars(matches("%")), function(x) x + 
+#               as.numeric(fit_tp$re_global["50%"]))
 
 
 gg_tp_re <- ggplot(data = fit_tp$re) +
