--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -343,8 +343,6 @@ ggplot() +
 
 gg_tn_re
 
-# gg_line
-
 ```
 
 ```{r re}
@@ -371,10 +369,13 @@ cowplot::plot_grid(gg_tp_re,
 ```
 
 ```{r re-comparison, fig.width=4}
-re_global <- dplyr::filter(re_global, term != "rowvcropvpct")
+re_global <- dplyr::filter(re_global, term != "rowvcropvpct") %>%
+mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0))
+
 gg_tn <- ggplot(data = dplyr::filter(re_global, response == "tn")) +
     geom_pointrange(aes(x = term, y = `50%`, 
-                      ymin = `5%`, ymax = `95%`), color = "red") +
+                      ymin = `5%`, ymax = `95%`, color = signif)) +
+  scale_color_manual(values = c("black", "red")) +
   geom_hline(yintercept = 0, linetype = "dashed") +
   expand_limits(y = c(-0.2, 0.5)) +
   coord_flip() +
@@ -387,13 +388,15 @@ gg_tn <- ggplot(data = dplyr::filter(re_global, response == "tn")) +
         panel.grid = element_blank(),
         rect = element_rect(fill = "transparent"), 
         axis.line = element_line(), 
-        axis.text.y = element_blank()) +
+        axis.text.y = element_blank(), 
+        legend.position = "none") +
   ggtitle("TN") + 
   theme(plot.title = element_text(hjust = 0.5, face = "bold"))
 
 gg_tp <- ggplot(data = dplyr::filter(re_global, response == "tp")) +
     geom_pointrange(aes(x = term, y = `50%`, 
-                      ymin = `5%`, ymax = `95%`), color = "red") +
+                      ymin = `5%`, ymax = `95%`, color = signif)) +
+  scale_color_manual(values = c("black", "red")) +
   geom_hline(yintercept = 0, linetype = "dashed") +
   expand_limits(y = c(-0.2, 0.5)) +
   coord_flip() +
@@ -405,7 +408,8 @@ gg_tp <- ggplot(data = dplyr::filter(re_global, response == "tp")) +
         plot.background = element_rect(fill = "transparent", color = NA), 
         panel.grid = element_blank(),
         rect = element_rect(fill = "transparent"), 
-        axis.line = element_line()) +
+        axis.line = element_line(), 
+        legend.position = "none") +
   ggtitle("TP") + 
   theme(plot.title = element_text(hjust = 0.5, face = "bold"))
 
