--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -45,6 +45,6 @@ knitr::include_graphics("../figures/re-1.pdf")
 knitr::include_graphics("../figures/tn_re_hu4-1.pdf")
 ```
 
-```{r tn_re_compare-1, fig.cap = "Histograms showing the distribution of Clay and N deposition for the corn sensitive regions compared to all other regions. Medians for each group are shown as vertical dashed lines.", warning=FALSE, echo = FALSE}
+```{r tn_re_compare-1, fig.cap = "Histograms showing the distribution of Clay for regions sensitive to watershed land-use (see highlighted credible intervals in Figure 4) relative to all other regions. Medians for each group are shown as vertical dashed lines.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/tn_re_compare-1.pdf")
 ```
