--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -225,6 +225,7 @@ gg_tp_re
 study_bbox    <- st_read("../data/gis.gpkg", "study_bbox", quiet = TRUE)[3,]
 states_all    <- st_read("../data/gis.gpkg", "states_all", quiet = TRUE)
 hu4_all       <- st_read("../data/gis.gpkg", "hu4s_focal_simple", quiet = TRUE)
+hu4_all     <- st_crop(st_transform(hu4_all, st_crs(study_bbox)), study_bbox)
 
 # map significant random effects hu4s
 gg_hu4 <- 
