--- a/figures/11_map.Rmd
+++ b/figures/11_map.Rmd
@@ -21,6 +21,7 @@ ep            <- st_read("../data/gis.gpkg", "ep", quiet = TRUE)
 states_all    <- st_read("../data/gis.gpkg", "states_all", quiet = TRUE)
 states_focal  <- st_read("../data/gis.gpkg", "states_focal", quiet = TRUE)
 hu4_focal     <- st_read("../data/gis.gpkg", "hu4s_focal_simple", quiet = TRUE)
+hu4_focal     <- st_crop(st_transform(hu4_focal, st_crs(study_bbox)), study_bbox)
 
 # outline <- ne_countries(country = c("canada", "mexico", "united states of america"), 
 #                      returnclass = "sf")
